It should be an error to use adoptPtr with RefCounted subclasses https://bugs.webkit.org/show_bug.cgi?id=115389

Reviewed by Benjamin Poulain.

* wtf/PassOwnPtr.h:
(WTF::adoptPtr):
Add COMPILE_ASSERTs.

Canonical link: https://commits.webkit.org/133825@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149341 268f45cc-cd09-0410-ab3c-d52691b4dbfc